--- a/jp/causal-inference-4.qmd
+++ b/jp/causal-inference-4.qmd
@@ -180,7 +180,15 @@ Keywords: causal model, probability model
 :::
 
 ::: voice-father
-お父さん「実際にナプキンに式を書いたのは理由がある。同じものをDAGと数式の2通りで表現していることを知ってほしかったんだ。いくつかの抽象的な表現を使うことは意外に多い。このマグカップを上から見てごらん」
+お父さん「実際にナプキンに式を書いたのは理由がある。同じものをDAGと数式の2通りで表現していることを知ってほしかったんだ。いくつかの抽象的な表現を使うことは意外に多い。ここにマグカップがあるよね」
+:::
+
+::: voice-daughter
+私「いつもコーヒーを飲んでるやつね」
+:::
+
+::: voice-father
+お父さん「これを上から見てごらん」
 :::
 
 ::: voice-daughter
@@ -192,11 +200,11 @@ Keywords: causal model, probability model
 :::
 
 ::: voice-daughter
-私「そうだね。それがどうしたの」
+私「そうだね。それがどうかしたの？」
 :::
 
 ::: voice-father
-お父さん「数学の授業で、x軸とy軸をとると円はこの方程式で表せるって習ったでしょ。DAGと条件付確率の式の関係はこれに似ている」
+お父さん「数学の授業で、x軸とy軸をとると円はこんな方程式で表せるって習ったでしょ。DAGと条件付確率の式の関係は、これに似ている」
 :::
 
 $$x^2+y^2=r$$
@@ -210,7 +218,7 @@ $$x^2+y^2=r$$
 :::
 
 ::: voice-daughter
-私「そりゃあDAGの方が私にはわかりやすいよ」
+私「そりゃあ、矢印でつながってるだけの方が、まずはわかりやすいよ」
 :::
 
 ::: voice-father
@@ -222,7 +230,7 @@ $$x^2+y^2=r$$
 :::
 
 ::: voice-father
-お父さん「その通り、マグカップが円柱として見える。この円柱はRubin因果モデルの潜在結果変数みたいなものじゃない？上から見たデータだけじゃ、全体はわからないよね。それが観測できない潜在結果変数なんだ」
+お父さん「その通り、マグカップが円柱として見える。この円柱はRubin因果モデルの潜在結果変数みたいなものじゃない？上から観測できるデータだけじゃ、全体はわからないよね。それが観測できない潜在結果変数なんだ」
 :::
 
 ::: voice-daughter
@@ -230,7 +238,7 @@ $$x^2+y^2=r$$
 :::
 
 ::: voice-father
-お父さん「1つのマグカップの中に、確率モデル、DAG、Rubin因果モデルという3つの構造が隠れている。抽象的な構造に基づいてデータから知識を引き出す。単なる情報処理や圧縮じゃなく、人間が知りたかった情報を得るためにね。統計解析は人間のためのもの。だからこそ、どの抽象表現で世界を見るかが大事になる」
+お父さん「1つのマグカップの中に、確率モデル、DAG、Rubin因果モデルという3つの構造が隠れている。抽象的な構造に基づいてデータから情報を引き出す。それも、単なる情報処理や圧縮じゃなく、患者さんのための知識を得るためにね。統計解析は人間のためのもの。だからこそ、どの抽象表現で世界を見るかが大事になる」
 :::
 ::::::::::::::::::::::::::::::::: 
 
