--- a/jp/publish-a-paper-1.qmd
+++ b/jp/publish-a-paper-1.qmd
@@ -164,7 +164,7 @@ Keywords: bias, hypothesis/outcome/population, language/writing
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「がんサバイバー調査についてなんだけどね。調査結果がまとまったから、論文を書かなきゃって思ってるんだけど...。お父さんって、どこかのジャーナルで統計エディターしてたよね？論文って、どんな感じで書くと採択されやすいのかな」**
+私「がんサバイバー調査についてなんだけどね。調査結果がまとまったから、論文を書かなきゃって思ってるんだけど...。お父さんって、どこかのジャーナルで統計エディターしてたよね？論文って、どんな感じで書くと採択されやすいのかな」
 :::
 
 ::: voice-father
@@ -234,8 +234,11 @@ Keywords: bias, hypothesis/outcome/population, language/writing
 ::: voice-father
 お父さん「いや？ボランティア。利益相反とかいわれるとややこしいから、むしろどこからもお金を受け取りたくない。2019年にレビュワーの利益相反が問題になったことがあってね。それ以来、そのジャーナル（BMJ）は、査読コメントや著者の回答をサイトで公開するようになった。ピアレビューのプロセスが知りたければ、そのサイトをみてみたらいいよ。論文投稿するときは、論文を書くだけじゃなくて、英語でやり取りしなきゃいけないことが案外多いから、参考になるかもしれない」
 :::
+:::::::::::::::::::::::::::::::::
 
 ### 価値と方法論
+
+::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
 私「ふむふむ。話を戻すとさ。採択される基準は、価値と方法論っていってたよね。具体的にはどうすればいいの？」
 :::
@@ -335,6 +338,7 @@ Keywords: bias, hypothesis/outcome/population, language/writing
 ::: voice-father
 お父さん「うんうん。ちなみにね、凝った英語を使う必要はないよ。論文は、"concise"つまり簡潔な表現が好ましいとされる。接続詞や関係代名詞を多用しちゃって、一文が長くなりがちな人もいるけど、最初はそうしない方がいい。短い文章が続いていてもぜんぜん変じゃないからね」
 ::: 
+:::::::::::::::::::::::::::::::::
 
 ### エピソード
 
