--- a/jp/index.qmd
+++ b/jp/index.qmd
@@ -237,14 +237,14 @@ a:hover {
 - [A Circle, an Equation, and a Cylinder]
 - [Backdoor Paths, Block, and d-Separation: A Clue for Adjusting for Bias]
 
-### 8. Publishing a Paper — 研究の営み
+### 8. Publish a Paper — 研究の営み
 
-研究結果をどう伝えるか、図表の作り方、推敲のコツ、査読の向き合い方。統計の“その先”を扱う、研究者のための静かな講義。
+研究結果をどう伝えるか、図表の作り方、推敲のコツ、査読の向き合い方。統計の“その先”を扱う、研究者のための静かな営み。
 
-- [Publishing a paper I]
-- [Publishing a paper II]
-- [Publishing a paper III]
-- [Publishing a paper IV]
+- [A Subtle Distinction Between Editors and Reviewers]
+- [Three Tips for Writing a Paper]
+- [Communicating with Care]
+- [A Morning Just Before Submission]
 
 ------------------------------------------------------------------------
 
@@ -253,8 +253,8 @@ a:hover {
 まずは **Study designシリーズ**を読めば、臨床研究の風景や「どんな問いを立てて、どんなデータを集めるか」という輪郭が見えてきます。そこから先は物語を追っても、興味の向くレイヤーを選んでも構いません。
 
 - **論文を読む足場を整えたい**: Frequentist Thinking
-- **数字の意味や統計解析の実際をもう少し深く知りたい**: Effects and Time / Adjusting for bias
+- **数字の意味や統計解析の実際をもう少し深く知りたい**: Effects and Time / Adjusting for Bias
 - **因果という見えない構造を整理したい**: Causal Inference
-- **研究を形にして届けるところまで見通したい**: Publishing a Paper
+- **研究を形にして届けるところまで見通したい**: Publish a Paper
 
 どのエピソードも独立して構成されていますが、全体を読むと、生活・臨床・因果・データ・認識・言語がひとつの流れとしてつながり、研究という営みの地図が、少しずつ頭の中にスケッチされていきます。お好みの飲み物を片手に、ふたりの会話の旅をどうぞお楽しみください。
